--- a/src/composer.json
+++ b/src/composer.json
@@ -6,10 +6,12 @@
     "license": "MIT",
     "require": {
         "php": "^8.1",
+        "aws/aws-sdk-php": "^3.262",
         "guzzlehttp/guzzle": "^7.2",
         "laravel/framework": "^10.0",
         "laravel/sanctum": "^3.2",
-        "laravel/tinker": "^2.8"
+        "laravel/tinker": "^2.8",
+        "league/flysystem-aws-s3-v3": "^3.12"
     },
     "require-dev": {
         "fakerphp/faker": "^1.9.1",
@@ -28,7 +30,10 @@
             "Database\\Seeders\\": "database/seeders/",
             "Igrejei\\": "Igrejei/",
             "Repositories\\": "Repositories/"
-        }
+        },
+        "files": [
+            "helpers/string.php"
+        ]
     },
     "autoload-dev": {
         "psr-4": {
