refactor: change main folder name

--- a/src/composer.json
+++ b/src/composer.json
@@ -30,7 +30,7 @@
             "App\\": "app/",
             "Database\\Factories\\": "database/factories/",
             "Database\\Seeders\\": "database/seeders/",
-            "Igrejei\\": "Igrejei/",
+            "NoName\\": "NoName/",
             "Repositories\\": "Repositories/"
         },
         "files": [
