--- a/src/phpstan.neon
+++ b/src/phpstan.neon
@@ -5,7 +5,7 @@ parameters:
 
     paths:
         - app
-        - Igrejei
+        - NoName
 
     # The level 8 is the highest level
     level: 5
